# scalable-learning

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  Makefile  README.md  pyproject.toml
assignment-2/: CS4725_Homework_2_Answers.tex
code/: README.md
docs/: claude-conversation.md  deep-research-improvements.md  experiment-matrix.md  kickoff.md  progress.md
experiments/: README.md
notebooks/: README.md  mnist_fig2.py  mnist_fig2_compare.py
report/: README.md
results_extra/: baselines_n5_r100_log5.json  orth_a_n5_r100_log5.json  smoke_baselines_n2_r5.json  smoke_sparse.json
scripts/: README.md  extract_supplement.sh  install_supplement.sh  local_suite.py  overnight_matrix.sh  prep_glue.py  rerun_failed_matrix_arms.sh  run_supplement.py  run_supplement_arm.sh  smoke_supplement.sh  summarize_supplement.py  sync_to_delftblue.sh  warm_caches.sh
slurm/: README.md  gpu-a100-small.sbatch  gpu-v100.sbatch  repro_qnli_c20_r4_ffa_lora.sbatch  repro_qnli_c20_r4_lora.sbatch  repro_qnli_c20_r4_rolora.sbatch  repro_qnli_c20_r4_rolora_lr1e-1.sbatch  repro_qnli_c20_r4_rolora_lr1e-2.sbatch  repro_qnli_c20_r4_rolora_lr1e-3.sbatch  repro_qnli_c20_r4_rolora_lr2e-2.sbatch  repro_qnli_c20_r4_rolora_lr2e-3.sbatch  repro_qnli_c20_r4_rolora_lr5e-2.sbatch  repro_qnli_c20_r4_rolora_lr5e-3.sbatch  repro_qnli_c20_r4_rolora_lr5e-4.sbatch  repro_qnli_c3_r4_ffa_lora.sbatch  repro_qnli_c3_r4_lora.sbatch  repro_qnli_c3_r4_rolora.sbatch  repro_qnli_c50_r4_ffa_lora_lr1e-2.sbatch  repro_qnli_c50_r4_ffa_lora_lr2e-2.sbatch  repro_qnli_c50_r4_ffa_lora_lr5e-3.sbatch  repro_qnli_c50_r4_lora_lr1e-2.sbatch  repro_qnli_c50_r4_lora_lr2e-2.sbatch  repro_qnli_c50_r4_lora_lr5e-3.sbatch  repro_qnli_c50_r4_rolora_lr1e-1.sbatch  repro_qnli_c50_r4_rolora_lr1e-2.sbatch  repro_qnli_c50_r4_rolora_lr1e-3.sbatch  repro_qnli_c50_r4_rolora_lr2e-2.sbatch  repro_qnli_c50_r4_rolora_lr2e-3.sbatch  repro_qnli_c50_r4_rolora_lr5e-2.sbatch  repro_qnli_c50_r4_rolora_lr5e-3.sbatch  repro_qnli_c50_r4_rolora_lr5e-4.sbatch
tests/: test_aggregation_invariants.py  test_init_conventions.py  test_local_suite.py  test_lora_math.py  (+5 more)
(+78 files in other folders)
