[project]
name = "sls-rolora"
version = "0.0.1"
description = "TU Delft CS 4725 — reproducing and extending RoLoRA (Chen et al., NeurIPS 2025)."
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
    { name = "Vlad Iftode" },
    { name = "Daniel Popovici" },
    { name = "Sorin Zele" },
]
dependencies = [
    "torch>=2.1,<2.4",
    "transformers>=4.40,<4.50",
    "peft==0.10.0",
    "datasets>=2.18",
    "accelerate>=0.30",
    "numpy>=1.26,<2.0",
    "pyyaml>=6",
    "rich>=13",
    "tyro>=0.7",
    "matplotlib>=3.8",
    "torchvision>=0.16",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-xdist>=3",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "code/harness/fedsa-lora",
    "code/harness/rolora-supplement",
    "data",
    "exp",
    "results",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = [
    "E501",
    # PyTorch convention: import torch.nn.functional as F.
    "N812",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.uv]
package = false
